fix timer spacing

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
   left: 0;
   top: 0;
   display: block;
+  background-repeat: repeat-y;
   opacity: 0.4;
   width: 100%;
   height: 100%;
